--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -19,6 +19,10 @@ footer {
         flex-wrap: wrap;
     }
 
+    @include breakpoint($sm-bp) {
+        flex-direction: column;
+    }
+
     .container {
         display: flex;
         flex-direction: column;
