--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,12 @@
 <header class="header">
-    <div class="logoContainer">
-        <img src="./assets/images/header/logo.png" alt="#">
-    </div>
+    <a href="#" class="logoContainer">
+        <img src="./assets/images/header/logo.svg" alt="#">
+    </a>
     <div class="menuItemsContainer">
         <div class="menuItemsHelper">
-            <div class="menuItem">Возможности CRM</div>
-            <div class="menuItem">Цены</div>
-            <div class="menuItem">8 800 111 33 22 </div>
+            <a href="#" class="menuItem">Возможности CRM</a>
+            <a href="#" class="menuItem">Цены</a>
+            <a href="#" class="menuItem">8 800 111 33 22 </a>
         </div>
         <button class="btnCall">Свяжитесь со мной</button>
         <button class="btnInit">Вход</button>
