--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -12,3 +12,12 @@
   font-style: normal;
   color: #FFFFFF;
 }
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url("../fonts/Ubuntu-Regular.ttf") format("ttf");
+  font-weight: 400;
+}
+
+
+
