--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,11 +11,11 @@
         <button class="btnCall">Свяжитесь со мной</button>
         <button class="btnInit">Вход</button>
         <button class="burgerBtn">
-            <div class="burger-button-close">
-                <div id="first-line-burger"></div>
-                <div id="second-line-burger"></div>
-                <div id="third-line-burger"></div>
-            </div>
+            <span class="burger-button-close">
+                <span id="first-line-burger"></span>
+                <span id="second-line-burger"></span>
+                <span id="third-line-burger"></span>
+            </span>
         </button>
     </div>
     <div class="page-wrapper">
