--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -34,6 +34,7 @@ footer {
 
         .imgContainer {
             margin-top: 2rem;
+            grid-row: 1 / 2;
         }
         .imgContainer + .littleText {
             margin-top: 2.5rem;
@@ -77,7 +78,9 @@ footer {
     }
 
     .leftContainer {
-        justify-content: inherit;
+        display: grid;
+        grid-template-columns: 1fr;
+        
     }
 
     .rightContainer {
