--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -1531,13 +1531,36 @@
                     }
                 }
                 .tickerContainer {
-                    @include breakpoint($xl-bp) {
-                        img {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: contain;
+                    
+                    .ticker__swiper {
+                        max-width: 46rem;
+                        background-color: #FFFFFF;
+                        padding-top: 2.2rem;
+                        padding-bottom: 2.6rem;
+                        border: 0.1rem solid #D9D9D9;
+                        border-radius: 1.2rem;
+                        margin-right: 0;
+                        margin-left: 0;
+                        .swiper-wrapper {
+                            align-items: center;
+                        }
+                        .swiper-slide {
+                            width: auto;
+                            height: 3rem;
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: contain;
+                            }
                         }
                     }
+                    // @include breakpoint($xl-bp) {
+                    //     img {
+                    //         width: 100%;
+                    //         height: 100%;
+                    //         object-fit: contain;
+                    //     }
+                    // }
                 }
             }
 
@@ -1844,13 +1867,36 @@
                     }
                 }
                 .tickerContainer {
-                    @include breakpoint($xl-bp) {
-                        img {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: contain;
+                    
+                    .ticker__swiper {
+                        max-width: 46rem;
+                        background-color: #FFFFFF;
+                        padding-top: 2.2rem;
+                        padding-bottom: 2.6rem;
+                        border: 0.1rem solid #D9D9D9;
+                        border-radius: 1.2rem;
+                        margin-right: 0;
+                        margin-left: 0;
+                        .swiper-wrapper {
+                            align-items: center;
+                        }
+                        .swiper-slide {
+                            width: auto;
+                            height: 3rem;
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: contain;
+                            }
                         }
                     }
+                    // @include breakpoint($xl-bp) {
+                    //     img {
+                    //         width: 100%;
+                    //         height: 100%;
+                    //         object-fit: contain;
+                    //     }
+                    // }
                 }
 
                 ul {
@@ -2044,6 +2090,37 @@
                     .baseTickerContainer {
                         margin-top: 4rem;
                         margin-bottom: 4rem;
+                        @include breakpoint($sm-bp) {
+                            width: 42rem;
+                        }
+                        .contacts__swiper {
+                            max-width: 46rem;
+                            background-color: #FFFFFF;
+                            padding-top: 1rem;
+                            padding-bottom: 1rem;
+                            padding-left: 3.5rem;
+                            padding-right: 3.5rem;
+                            border: 0.1rem solid #D9D9D9;
+                            border-radius: 1.2rem;
+                            margin-right: 0;
+                            margin-left: 0;
+                            .swiper-wrapper {
+                                align-items: center;
+                            }
+                            .swiper-slide {
+                                width: 6rem;
+                                height: 6rem;
+                                a {
+                                    width: 100%;
+                                    height: 100%;
+                                    img {
+                                        width: 100%;
+                                        height: 100%;
+                                        object-fit: contain;
+                                    }
+                                }
+                            }
+                        }
                         @include breakpoint($xl-bp) {
                             margin-top: 3rem;
                             margin-bottom: 3rem;
@@ -2054,7 +2131,6 @@
                             }
                         }
                     }
-    
                     ul {
                         display: flex;
                         flex-direction: column;
@@ -6211,6 +6287,7 @@
         .rev-main__icon:hover .rev-main__tab {
             display: block;
         }
+
         .rev-main__commets-wrapper {
             margin-top: 2.8rem;
             position: relative;
@@ -6436,6 +6513,10 @@
             line-height: 4.9rem;
             
             color: #3E3E3F;
+            transition: color 0.5s ease;
+        }
+        .white {
+            color: #fff;
         }
         .bar{
             width:min-content;
@@ -6621,6 +6702,10 @@
         .cartContainer {
             display: flex;
             gap: 9.2rem;
+            padding-left: 24rem;
+            @include breakpoint($mm-bp) {
+                padding-left: 0;
+            }
             @include breakpoint($xl-bp) {
                 flex-direction: column-reverse;
                 gap: 5rem;
@@ -7470,5 +7555,12 @@
         @include breakpoint($sm-bp) {
             padding-left: 0rem;
         }
+    }
+
+    button[aria-label="Next slide"]:hover {
+        opacity: 0.6;
+    }
+    button[aria-label="Previous slide"]:hover {
+        opacity: 0.6;
     }
 }
