--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="container rightContainer">
-        <a href="#" class="bigText mob">
+        <a href="tel:88001113322" class="bigText mob">
             8 800 111 33 22
         </a>
 
